test: try to fix overflow issues with screen keyboard

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3,6 +3,9 @@
 
 /* /////////////////////////////// */
 /* /////////////////////////////// */
+body {
+  overflow: hidden;
+}
 
 .wrapper {
   display: grid;
