--- a/docs/styles/reset.css
+++ b/docs/styles/reset.css
@@ -7,7 +7,7 @@
 }
 
 html, body {
-  min-height: 100dvh;
+  height: 100%;
 }
 
 html {
